<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/camel" />


    <ImageView
        android:id="@+id/ivRocket"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:contentDescription="@string/rocket_picture" />

    <ImageView
        android:id="@+id/ivForeground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/camel_front"
        tools:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:alpha=".15"
        android:background="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/tfc_is_launching"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="75sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/auto_refresh"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivDebug"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="12dp"
                android:contentDescription="@string/debug_icon"
                android:src="@drawable/debug"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivAlert"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="12dp"
                android:contentDescription="@string/alert_icon"
                android:src="@drawable/alert"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivCloud"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="12dp"
                android:contentDescription="@string/cloud_icon"
                android:src="@drawable/cloud"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivClock"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="12dp"
                android:contentDescription="@string/clock_icon"
                android:src="@drawable/clock"
                android:visibility="gone"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivHelp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/help_icon"
                android:layout_marginHorizontal="12dp"
                app:srcCompat="@drawable/help_outline"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/settings_icon"
                android:layout_marginHorizontal="12dp"
                app:srcCompat="@drawable/settings"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/tvVersion"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>